--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "protractor-es6-modules-esm-mocha-chai",
+  "name": "protractor-es6-modules-esm-mocha-assert",
   "version": "1.0.0",
-  "description": "Protractor end-to-end test automation boilerplate, using ES6-modules, ESM, Mocha and Chai",
+  "description": "Protractor end-to-end test automation boilerplate, using ES6-modules, ESM, Mocha and Assert",
   "scripts": {
     "lint": "npx eslint --ext .js ./ --fix",
     "upadte-webderiver": "npx webdriver-manager update",
@@ -13,14 +13,13 @@
     "es6 modules",
     "esm",
     "mocha",
-    "chai",
+    "assert",
     "boilerplate",
     "example"
   ],
   "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.2.0",
     "eslint": "6.5.1",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-prettier": "6.9.0",
