--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,7 +25,7 @@ jobs:
           npm run lint
       - name: UPDATE WEBDRIVER
         run: |
-          npm run upadte-webderiver
+          npm run upadte-webderiver-ci
       - name: TEST
         run: |
-          npm run test-ci
+          npm run test
