--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/protractor-es-modules-esm-mocha-assert/issues"
   },
-  "description": "Protractor end-to-end test automation boilerplate. Using Using ES Modules, esm, Mocha and Assert.",
+  "description": "Protractor end-to-end test automation boilerplate. using ES Modules, esm, Mocha and Assert.",
   "devDependencies": {
     "eslint": "6.5.1",
     "eslint-config-airbnb-base": "14.0.0",
@@ -27,12 +27,7 @@
   },
   "keywords": [
     "assert",
-    "boilerplate",
-    "e2e",
-    "e2e tests",
     "esm",
-    "example",
-    "integration test",
     "mocha",
     "protractor"
   ],
