--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "eslint-config-airbnb-base": "14.1.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-json": "2.1.1",
     "eslint-plugin-prettier": "3.1.2",
     "esm": "3.2.25",
     "husky": "3.1.0",
@@ -47,5 +46,6 @@
     "test": "npx protractor -r esm",
     "update-webdriver": "npx webdriver-manager update"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {}
 }
