--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/protractor-es-modules-esm-mocha-assert/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "esm": "3.2.25",
+    "protractor": "5.4.3"
+  },
   "description": "Protractor end-to-end test automation boilerplate. using ES Modules, esm, Mocha and Assert.",
   "devDependencies": {
-    "eslint": "6.5.1",
+    "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.1.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "3.1.2",
-    "esm": "3.2.25",
-    "husky": "3.1.0",
-    "jasmine": "3.5.0",
-    "mocha": "7.1.1",
+    "husky": "4.2.3",
     "prettier": "1.19.1",
-    "pretty-quick": "2.0.0",
-    "protractor": "5.4.3"
+    "pretty-quick": "2.0.1"
   },
   "homepage": "https://github.com/e2e-boilerplate/protractor-es-modules-esm-mocha-assert#readme",
   "husky": {
