--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "Girma Nigusse <xgirma@gmail.com>",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/protractor-es-modules-esm-mocha-assert/issues"
   },
@@ -16,7 +16,7 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.3",
-    "prettier": "2.0.2",
+    "prettier": "1.19.1",
     "pretty-quick": "2.0.1"
   },
   "homepage": "https://github.com/e2e-boilerplate/protractor-es-modules-esm-mocha-assert#readme",
@@ -45,7 +45,7 @@
   "scripts": {
     "lint": "npx eslint --ext .js ./ --fix",
     "test": "npx protractor -r esm",
-    "update-webdriver": "npx webdriver-manager update"
+    "update:webdriver": "npx webdriver-manager update --gecko false"
   },
   "version": "1.0.0"
 }
