--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "esm": "3.2.25",
     "mocha": "7.1.2",
-    "protractor": "5.4.4"
+    "protractor": "7.0.0"
   },
   "description": "Protractor end-to-end test automation boilerplate. Using ES Modules, esm, Mocha and Assert.",
   "devDependencies": {
@@ -31,6 +31,7 @@
     "boilerplate",
     "e2e",
     "e2e tests",
+    "es modules",
     "esm",
     "example",
     "integration test",
