--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "esm",
     "mocha",
     "protractor",
+    "protractor automation",
+    "protractor boilerplate",
+    "protractor example",
     "e2e",
     "e2e tests",
     "boilerplate",
